added div class

--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
   
   <h1> What I have been up to recently besides classes? </h1>
  <div class="flex-container">
-  <div>Reading Jim Butcher's take on high fantasy, The Codex Alera series starting with The Furies of Calderon, He created the series on a bet to make two random 'bad' book ideas into a dencent series. The ideas were "Pokemon and lost Roman Legion" I like the first book so far!</div>
-  <div>Went on A trip to door county and went kayaking for the first time in a long time.</div>
-  <div>Training for a 5k run coming up in a few months.</div>  
+  <div class="flex-container">Reading Jim Butcher's take on high fantasy, The Codex Alera series starting with The Furies of Calderon, He created the series on a bet to make two random 'bad' book ideas into a dencent series. The ideas were "Pokemon and lost Roman Legion" I like the first book so far!</div>
+  <div class="flex-container">Went on A trip to door county and went kayaking for the first time in a long time.</div>
+  <div class="flex-container">Training for a 5k run coming up in a few months.</div>  
 </div>
 </body>
 </html>
